<resources>
    <string name="app_name">Master FRC Scouter</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="loginButton">Login</string>
    <string name="enterInfoText">Please enter your info:</string>
    <string name="name">Name</string>
    <string name="idNumberText">ID Number</string>
    <string name="matchScoutText">Match Scout</string>
    <string name="pitScoutText">Pit Scout</string>
    <string name="infoText">Info</string>
    <string name="takeABreak">Take a Break</string>
    <string name="logOutText">Log Out</string>
    <string name="title_activity_break_time">In Break</string>
    <string name="hello_world">Hello world!</string>
    <string name="TBA">The Blue Alliance</string>
    <string name="importData">Import Data</string>
    <string name="exportData">Export Data</string>
    <string name="welcome">Select Action:</string>
    <string name="endBreak">End Break</string>
    <string name="title_activity_match_scout">Match Scout</string>
    <string name="title_activity_pit_scout">Pit Scout</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_the_blue_alliance">The Blue Alliance</string>
    <string name="title_activity_import_data">Import Data</string>
    <string name="title_activity_export_data">Export Data</string>
    <string name="returnText">Return</string>
    <string name="exportDataText">Export Data</string>
    <string name="teamNumberText">Team Num</string>
    <string name="matchNumberText">Match Num</string>
    <string name="autonomous">Autonomous</string>
    <string name="scoutingPositionText">Position</string>
    <string name="title_activity_teleop_match_scout">Teleoperated</string>
    <string name="title_activity_auton_match_scout">Autonomous</string>
    <string name="redAllianceText">Red Alliance</string>
    <string name="numCansGrabbedText"># Cans Grabbed</string>
    <string name="didNothingText">Did Nothing?</string>
    <string name="acquiredStepBinsText">Acquired Step Bins</string>
    <string name="numAutoFoulsText">Auto Fouls</string>
    <string name="binSetText">Bin Set?</string>
    <string name="toteSetText">Tote Set?</string>
    <string name="stackedToteSetText">Stacked Tote Set?</string>
    <string name="robotSetText">Robot Set?</string>
    <string name="driveToAutoZoneText">Drive to Auto Zone?</string>
    <string name="teleopText">Teleop</string>
    <string name="submitText">Submit</string>
    <string name="submitStackText">Submit Stack</string>
    <string name="stackHeightText">Stack Height</string>
    <string name="canonTopWithLitterText">Can On Top With Litter?</string>
    <string name="canOnTopText">Can On Top?</string>
    <string name="numHumanLitterThrownText">Num Litter Thrown</string>
    <string name="numLitterPushedText">Num Litter Pushed</string>
    <string name="numTeleFoulsText">Tele Fouls</string>
    <string name="coopSetText">CO-OP Set</string>
    <string name="coopStackText">CO-OP Stack</string>
    <string name="commentsText">Comments: </string>
    <string name="knockedOverStacksText">Stack(s) Knocked Over?</string>
    <string name="robotWasPoorlyDrivenText">Robot Driven Poorly"</string>
    <string name="allianceScoreText">Alliance Score</string>
    <string name="title_activity_can_burgeled_auton">Can Auton</string>
    <string name="cappedCansText">Did Cap Cans</string>
    <string name="numCansCappedText"># Cans Capped</string>
    <string name="doneText">Done</string>
    <string name="canBuglingSpeed">Speed</string>
    <string name="numCansAttemptedText"># Attempted</string>
    <string name="title_activity_match_scout_submit">Match Submit</string>
    <string name="nextText">Next</string>
    <string name="canSpeedInstructionsText">A decimal number from 0 to 1:</string>
    <string name="totesFromHumanFeederText">Totes from Human Feeder</string>
    <string name="totesFromLandfillText">Totes from Landfill</string>
    <string name="autonSelectionText">Auton Selection:</string>
    <string name="goHome">Go Home</string>
    <string name="title_activity_side_menu">SideMenu</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
</resources>
