<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:weightSum = "3"
    android:layout_height="match_parent"

    tools:context="org.hammerhead226.masterfrcscouter.Activities.TeleopMatchScoutActivity">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_gravity="right|top"
            android:id="@+id/stackSubmitFrame"
            android:background="@drawable/layout_border"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submitStackText"
                android:id="@+id/submitStack"
                android:layout_gravity="center_horizontal|bottom" />

            <EditText
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/stackHeightET"
                android:layout_gravity="center_horizontal|top"
                android:hint="@string/stackHeightText" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/canonTopWithLitterText"
                android:id="@+id/canOnTopWithLitterCB"
                android:layout_gravity="left|center_vertical"
                />

            <CheckBox
                android:padding = "10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/canOnTopText"
                android:id="@+id/canOnTopCB"
                android:layout_gravity="right|center_vertical" />
        </FrameLayout>

        <FrameLayout
            android:padding = "10dp"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:id="@+id/toteStackFrameLayout"
            android:background="@drawable/layout_border"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/stackSubmitFrame"
            android:layout_marginTop="35dp">

            <CheckBox
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totesFromHumanFeederText"
                android:id="@+id/totesFromHumanFeeder"
                android:layout_gravity="left|top" />

            <CheckBox
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totesFromLandfillText"
                android:id="@+id/totesFromLandfill"
                android:layout_gravity="right|top" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:text="@string/cappedCansText"
                android:id="@+id/canCappedSwitch"
                android:layout_gravity="left|bottom" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/numCansCappedET"
                android:gravity="center"
                android:layout_gravity="right|bottom"
                android:hint="@string/numCansCappedText" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal|bottom"
            android:background="@drawable/layout_border"
            android:id="@+id/miscFrameLayout"
            android:layout_above="@+id/nextBttn"
            android:layout_alignStart="@+id/stackSubmitFrame"
            android:layout_marginBottom="35dp">

            <Switch
                android:padding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coopSetText"
                android:id="@+id/coopSetSwitch"
                android:layout_gravity="left|top" />

            <Switch
                android:padding="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coopStackText"
                android:id="@+id/coopStackSwitch"
                android:layout_gravity="right|top" />

            <Switch
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/knockedOverStacksText"
                android:id="@+id/knockedStackSwitch"
                android:layout_gravity="left|bottom"
                android:singleLine="false" />

            <EditText
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/numTeleFoulsET"
                android:layout_gravity="right|bottom"
                android:hint="@string/numTeleFoulsText" />

        </FrameLayout>


    <Button
        android:padding = "10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextText"
        android:id="@+id/nextBttn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
