<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:clickable="false">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matchScoutText"
        android:id="@+id/matchScout"
        android:enabled="true"
        android:clickable="true"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/welcome"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pitScoutText"
        android:id="@+id/pitScout"
        android:enabled="true"
        android:clickable="true"
        android:layout_above="@+id/info"
        android:layout_alignEnd="@+id/TBAbtn"
        android:layout_alignParentTop="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infoText"
        android:id="@+id/info"
        android:enabled="true"
        android:clickable="true"
        android:layout_marginTop="107dp"
        android:layout_below="@+id/matchScout"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TBA"
        android:id="@+id/TBAbtn"
        android:enabled="true"
        android:clickable="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/info"
        android:layout_alignEnd="@+id/matchScout"
        android:layout_centerVertical="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exportData"
        android:id="@+id/dataExport"
        android:enabled="true"
        android:clickable="true"
        android:layout_alignTop="@+id/logOut"
        android:layout_alignEnd="@+id/matchScout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:id="@+id/welcome"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/pitScout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logOutText"
        android:id="@+id/logOut"
        android:enabled="true"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/pitScout" />

</RelativeLayout>
