<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.adithyasairam.android.masterfrcscouter.MatchScoutActivity"
    android:id="@+id/matchScoutUno"
    android:clickable="false">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="6"
        android:id="@+id/teamNumberET"
        android:hint="@string/teamNumberText"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="6"
        android:id="@+id/matchNumberET"
        android:hint="@string/matchNumberText"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/redAllianceText"
        android:id="@+id/scoutingAllianceColorRedToggle"
        android:layout_alignBottom="@+id/scoutingPositionET"
        android:layout_alignParentStart="true"
        android:enabled="true"
        android:clickable="true"
        android:checked="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="6"
        android:id="@+id/scoutingPositionET"
        android:hint="@string/scoutingPositionText"
        android:layout_marginTop="61dp"
        android:layout_below="@+id/matchNumberET"
        android:layout_alignStart="@+id/matchNumberET" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autonomous"
        android:id="@+id/autonButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
