<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.hammerhead226.masterfrcscouter.Activities.MatchScoutSubmitActivity">

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/robotWasPoorlyDrivenText"
        android:id="@+id/badDrivingSwitch"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/allianceSelectionET"
        android:hint="@string/allianceScoreText"
        android:layout_below="@+id/badDrivingSwitch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines = "10"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/commentsTextArea"
        android:layout_gravity="center"
        android:hint="@string/commentsText"
        android:focusableInTouchMode="true"
        android:editable="true"
        android:autoText="false"
        android:background="@drawable/layout_border"
        android:layout_above="@+id/nextBttn"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="43dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitText"
        android:id="@+id/nextBttn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
